--- a/templates/office365-wsfed-extended.xml
+++ b/templates/office365-wsfed-extended.xml
@@ -36,6 +36,7 @@
         </Attribute>
         <Attribute name="attributeMap">
             <Value>IDPEmail=mail</Value>
+            <Value>ImmutableID=mail;binary</Value>
         </Attribute>
         <Attribute name="saml2AuthModuleName">
             <Value/>
